Judge/testwork/3/error.txt
main.cpp:1:3: warning: missing terminating ' character
 it's java
   ^
main.cpp:1:3: error: missing terminating ' character
 it's java
   ^~~~~~~
main.cpp:1:1: error: ‘it’ does not name a type; did you mean ‘int’?
 it's java
 ^~
 int
